--- a/src/App.css
+++ b/src/App.css
@@ -118,14 +118,14 @@ justify-content: center;
 
 .CountryN{
   text-align: end;
-  color: #282c346a;  
+  color: #282c34;  
  font-size: 20px;
  margin-right: 7px;
 }
 
 .CityN{
   text-align: end;
-  color: rgb(6, 103, 103);
+  color: rgb(5, 75, 75);
   font-size: 25px;
   margin-right: 7px;
 }
