--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,9 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+body{
+  margin: 0;
+  font-family: 'Inter', sans-serif;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .Flag {
@@ -174,7 +142,7 @@ a {
 }
 
 .dailyForcastC div {
-  font-size: 20px;
+  font-size: 16px;
   width: 160px;
 }
 
@@ -183,7 +151,12 @@ a {
 }
 
 .space-between {
+  border-left: #282c34 solid 1px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.dateH{
+  font-size: small;
 }
