--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,6 @@ a {
 }
 
 .dailyForcastC div {
-  
   margin-left: 5px;
   font-size: 16px;
   width: 170px;
@@ -149,9 +148,7 @@ a {
 }
 
 .space-between {
-  
-  border-top: #282c34 solid 1px; ;
-
+  border-top: #282c34 solid 1px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -159,7 +156,7 @@ a {
   padding: 3px;
 }
 
-.space-between:nth-child(even){
+.space-between:nth-child(even) {
   border-left: #282c34 solid 1px;
 }
 
@@ -167,15 +164,15 @@ a {
   font-size: small;
 }
 
-.arrowspan{
+.arrowspan {
   margin-top: 10px;
   margin-right: 10px;
   margin-left: auto;
   width: 20px;
 }
 
-.FlagArrowC{
+.FlagArrowC {
   display: flex;
   justify-content: space-between;
-  align-items:flex-start;
+  align-items: flex-start;
 }
